# pendulum-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  approx.txt  config.sh  euler.txt  pendulum_approx.txt  pendulum_euler.txt
.github/workflows/: ubuntu-build.yml
App/: CMakeLists.txt  app.cpp  numerical_eq.cpp  numerical_eq.hpp  pendulum.cpp  pendulum.hpp  simulation.hpp  simulation2D.cpp  simulation2D.hpp  simulation3D.cpp  simulation3D.hpp
Pulsar/: CMakeLists.txt  Pulsar.hpp
Pulsar/core/log/: log.cpp  log.hpp
Pulsar/core/timer/: timer.cpp  timer.hpp
Pulsar/core/timers/: FPSTimer.cpp  FPSTimer.hpp  GlobalTimer.cpp  GlobalTimer.hpp  ScopedTimer.cpp  ScopedTimer.hpp  TimeManager.hpp  time_util.hpp
Pulsar/graphics/: system.cpp  system.hpp
Pulsar/graphics/manager/: pxgraphics.cpp  pxgraphics.hpp
Pulsar/graphics/renderer/: camera.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
Pulsar/graphics/renderer/core/: IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Texture2D.cpp  Texture2D.hpp  Textures.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Pulsar/graphics/renderer/primitives/: Circle.cpp  Circle.hpp  Cube.cpp  Cube.hpp  Line.cpp  Line.hpp  Sphere.cpp  Sphere.hpp  Square.hpp
Pulsar/graphics/widget/: gui.cpp  gui.hpp
Pulsar/graphics/window/: window.cpp  window.hpp
Pulsar/tests/: tests.cpp
core/: CMakeLists.txt
core/logger/: logger.cpp  logger.hpp
example/: CMakeLists.txt  app.cpp
graphics/: CMakeLists.txt  pxgraphics.cpp  pxgraphics.hpp
graphics/renderer/: renderer.hpp
graphics/widget/: gui.cpp
graphics/window/: window.cpp  window.hpp
res/shaders/: basic.shader  circle.shader  grid.shader  line.shader  platform.shader  shader_prog.txt  sphere.shader  trail.shader
src/: CMakeLists.txt  main.cpp
src/core/: logger.cpp  logger.hpp  systemhandler.cpp  systemhandler.hpp  window.cpp  window.hpp
